Long patch